updated link to book

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -10,7 +10,7 @@ entries:
       title: Overview
       url: /
     - output: web,pdf
-      title: Recursion Notes and Algorithms
+      title: Title
       url: /recursion
     output: web
     title: python_algorithms_nbs
